# LocalPaint

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  fsio.rs  lib.rs  main.rs
src/components/: BgRemoveModal.tsx  CanvasStage.tsx  ColorPanel.tsx  FiltersModal.tsx  Icon.tsx  LayersPanel.tsx  NewDocModal.tsx  ObjMaskBar.tsx  RefineBar.tsx  RemoveObjModal.tsx  SettingsModal.tsx  TextModal.tsx  Toasts.tsx  Toolbar.tsx
src/lib/: ai.worker.ts  aitypes.ts  aiworker.ts  bgremove.ts  color.ts  compose.ts  fill.ts  filters.ts  geometry.ts  history.ts  i18n.ts  inpaint.ts  io.ts  layers.ts  mask.ts  maskpaint.ts  matte.ts  model.ts  ort.ts  refine.ts  removeobj.ts  stamp.ts  text.ts  tpaint.ts
src/lib/__tests__/: color.test.ts  fill.test.ts  filters.test.ts  geometry.test.ts  history.test.ts  inpaint.test.ts  mask.test.ts  maskpaint.test.ts  matte.test.ts  model.test.ts  refine.test.ts  stamp.test.ts  tpaint.test.ts
src/state/: doc.ts  objmask.ts  refine.ts  selection.ts  tools.ts  ui.ts
